# JournalAnalyzer

./: README.md
output/: recommendations.txt
project/: .env  .gitignore  LICENSE  config.yaml  pyproject.toml  setup.py
project/journal_vetter.egg-info/: SOURCES.txt  requires.txt
project/output/: recommendations.txt
project/src/: .env  main.py  project.env
project/src/journal_vetter.egg-info/: PKG-INFO  SOURCES.txt
project/src/journalvetter/: __init__.py  cli.py  config.py  core.py
